# ChangeLog for games-arcade/emergence-bin
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-arcade/emergence-bin/Attic/ChangeLog,v 1.3 2004/11/20 00:36:35 mr_bones_ Exp $

*emergence-bin-0.9 (19 Nov 2004)

  19 Nov 2004; Michael Sterrett <mr_bones_@gentoo.org>
  +emergence-bin-0.9.ebuild:
  version bump

*emergence-bin-0.8 (15 Oct 2004)

  15 Oct 2004; Michael Sterrett <mr_bones_@gentoo.org>
  +emergence-bin-0.8.ebuild:
  version bump

*emergence-bin-0.7 (21 Sep 2004)

  21 Sep 2004; Michael Sterrett <mr_bones_@gentoo.org> +metadata.xml,
  +emergence-bin-0.7.ebuild:
  initial commit (bug #56399)
