@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/emergence-bin/Attic/emergence-bin-0.9.ebuild,v 1.1 2004/11/20 00:36:35 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/emergence-bin/Attic/emergence-bin-0.9.ebuild,v 1.2 2005/01/31 03:50:39 mr_bones_ Exp $
 
 inherit games
 
