@@ -1,6 +1,10 @@
 # ChangeLog for games-arcade/emergence-bin
-# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/emergence-bin/Attic/ChangeLog,v 1.3 2004/11/20 00:36:35 mr_bones_ Exp $
+# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/emergence-bin/Attic/ChangeLog,v 1.4 2005/01/31 03:50:39 mr_bones_ Exp $
+
+  30 Jan 2005; Michael Sterrett <mr_bones_@gentoo.org>
+  -emergence-bin-0.7.ebuild, -emergence-bin-0.8.ebuild:
+  clean old ebuilds
 
 *emergence-bin-0.9 (19 Nov 2004)
 
